# sonify-health

./: .gitignore  CHANGELOG.org  CONTRIBUTING.org  Cargo.toml  ERROR_HANDLING.org  README.org  config.example.toml  flake.nix  install.ps1  install.sh  justfile  llms.org  rust-template.json  sonification.org  tasks.org  treefmt.toml
.cargo-husky/hooks/: pre-commit
.claude/agents/: template-compliance.md
.claude/hooks/: review-stop.sh
.github/workflows/: publish.yml  release-binaries.yml
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  command.rs  config.rs  daemon.rs  lib.rs  lock_util.rs  logging.rs  main.rs  metrics.rs  patch_args.rs  preview_state.rs  print.rs  remote_source.rs  systemd.rs  voice_args.rs  web_base.rs  websocket.rs
crates/cli/tests/: integration_test.rs  override_isolation_test.rs  remote_mirror_test.rs  supervision_test.rs  websocket_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: audio.rs  check.rs  config.rs  continuous.rs  drone.rs  heartbeat.rs  heartbeat_config.rs  lib.rs  library.rs  logging.rs  patch.rs  probe.rs  scale.rs  severity.rs  state.rs  timing.rs  transition.rs  voice.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: audio_engine.rs  config.rs  frontend.rs  lib.rs  main.rs  metrics.rs  preview_state.rs  remote_source.rs  web_base.rs  websocket.rs
crates/server/tests/: override_isolation_test.rs  remote_mirror_test.rs  supervision_test.rs  websocket_test.rs
crates/server/tests/common/: mod.rs
crates/voice-derive/: Cargo.toml
crates/voice-derive/src/: lib.rs  patch_param.rs  voice_param.rs
crates/voice-derive/tests/: compile_tests.rs
crates/voice-derive/tests/compile_fail/: duplicate_order.rs  duplicate_order.stderr  gap_in_order.rs  gap_in_order.stderr  wrong_type.rs  wrong_type.stderr
docs/: audio-output-corrupted.org  systemd.org
examples/: connectivity-and-cpu-medbay.toml  connectivity-and-cpu-reactor.toml  connectivity-and-cpu-star-trek.toml  connectivity-and-cpu.toml
frontend/: elm.json
frontend/public/: index.html  style.css
frontend/src/: Help.elm  Main.elm  Ports.elm  Protocol.elm
nix/modules/: daemon.nix  darwin-daemon.nix  nixos-daemon.nix  web.nix
