[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/lib",
    "crates/voice-derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Logan Barnett <logustus@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://gitea.proton/logan/sonify-health"

[workspace.dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
# Utilities
# tap - Enables method chaining and reduces superfluous local variables
# that only exist to name intermediate results. Prefer .tap() over temporary
# variables when it improves readability.
tap = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Testing
tempfile = "3"
trybuild = "1.0"

# Audio
fundsp = "0.23"
cpal = "0.15"

# Voice generation
sha2 = "0.10"
rand = "0.8"
rand_xoshiro = "0.6"
gethostname = "0.4"

# Signal handling
ctrlc = "3.4"

# Web server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.41", features = ["full"] }
tokio-listener = { version = "0.5", features = ["axum08"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "set-header"] }
futures = "0.3"

# Authentication
openidconnect = { version = "3", features = ["reqwest"] }
# openidconnect's "rustls-tls" feature uses webpki-roots (Mozilla's CA list
# baked in at compile time), which doesn't include private CAs like proton-ca.
# Adding reqwest directly with rustls-tls-native-roots makes Cargo's feature
# unification pull in rustls-native-certs, so the system CA store
# (/etc/ssl/certs/ca-certificates.crt) is read at runtime instead.
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots"] }
tower-sessions = { version = "0.15", features = ["memory-store"] }

# Observability
prometheus = "0.13"

# OpenAPI
aide = { version = "0.15", features = ["axum", "axum-json", "axum-query", "scalar", "macros"] }
schemars = "0.9"

# Systemd integration
sd-notify = "0.4"

# Proc-macro support
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Shared library
sonify-health-lib = { path = "crates/lib" }
sonify-health-voice-derive = { path = "crates/voice-derive" }

# ============================================================================
# BUILD PROFILES
# ============================================================================
# Without these settings, target/debug can easily reach 20-40 GB on
# non-trivial projects.  Dependencies are the primary culprit.
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.dev]
# No debug symbols.  The debugger is rarely used and debug symbols are
# the single largest contributor to target/ bloat.
debug = false
# Disable incremental compilation.  Incremental writes many small files
# to target/debug/incremental/ that accumulate quickly; the compile-time
# benefit rarely outweighs the disk cost for typical workflows.
incremental = false

[profile.dev.package."*"]
# Optimize dependencies even in dev builds.  Libraries like tokio and
# axum are bottlenecks when unoptimized; this makes the program run at
# near-release speed during development with minimal extra compile time
# on subsequent incremental builds.
opt-level = 3

[profile.release]
debug = false
