[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/lib",
    "crates/server",
    "crates/voice-derive",
]

# Project-wide lint policy, enforced via clippy.  Test code is
# exempted from the panicking-variant bans by `clippy.toml`'s
# `allow-{unwrap,expect,panic}-in-tests`, which cover both
# `#[cfg(test)]` modules in `src/` and integration tests under
# `tests/`.  Member crates opt in by setting
# `[lints] workspace = true`.
#
# `clippy::all` (the default groups: correctness, style,
# complexity, perf, suspicious) is denied so that any clippy
# warning fails the build, not just the panicking-variant bans.
# Priority -1 is required whenever a lint group and individual
# lints from that group share a table — otherwise cargo errors
# with "lints contain duplicate".
#
# Matches the template's lint set so a sync run doesn't drift on
# the clippy block alone.  See `docs/compliance.org` in the
# template.
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# ----------------------------------------------------------------------------
# Combinator preference: nudge toward the least powerful construct that
# fits.  These flag manual reimplementations of standard combinators —
# match-on-Option that could be Option::map, if-let-else that could be
# map_or, and so on.  See llms.org "Rule of least power" for the
# principle behind the set.
#
# Configured at "warn" rather than "deny" because some imperative forms
# are genuinely clearer (multi-line bodies, side effects, nested control
# flow); humans can override site-locally with #[allow(...)] and a
# one-line reason.  Note: this downgrades the style/complexity lints
# from deny (via `all` above) to warn for this set specifically.
manual_map = "warn"
manual_filter = "warn"
manual_filter_map = "warn"
manual_find = "warn"
manual_find_map = "warn"
manual_flatten = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_unwrap_or = "warn"
manual_unwrap_or_default = "warn"
option_if_let_else = "warn"
map_unwrap_or = "warn"
needless_collect = "warn"
unnecessary_fold = "warn"
question_mark = "warn"
single_match_else = "warn"
collapsible_match = "warn"
redundant_pattern_matching = "warn"

[workspace.package]
version = "0.31.0"
edition = "2021"
authors = ["Logan Barnett <logustus@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://gitea.proton/logan/sonify-health"

[workspace.dependencies]
# Foundation infrastructure crate (config-merge derive, logging,
# server runner, health, metrics, OpenAPI, OIDC).  Consumed from
# crates.io by version rather than git: this workspace's own crates
# publish to crates.io, and crates.io rejects git dependencies, so
# every dependency — foundation included — must be a published-version
# dependency.  Bump this in step with the template's releases; the
# flake's `foundation` input still tracks the template by commit for
# the Nix build helpers, and template_sync_hashes still records the
# doc/infra sync points.
rust-template-foundation = "0.49.0"
# Embeds the compiled Elm bundle into the server binary so a downloaded release
# is self-contained.  The server crate's build.rs resolves the asset directory
# and exports it as SONIFY_HEALTH_FRONTEND_DIR for the `Frontend` derive.
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }

# Structured logging and span instrumentation: the facade every crate
# emits diagnostics through.
tracing = "0.1"
# Installs the subscriber that filters and renders those logs — env-filter
# honours RUST_LOG, and the json / fmt features select the output shape.
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
# Enables method chaining and reduces superfluous local variables that only
# exist to name intermediate results.  Prefer .tap() over temporary variables
# when it improves readability.
tap = "1.0"
# Derive-based argument parsing for the cli and server binaries; the env
# feature lets flags fall back to environment variables.
clap = { version = "4.5", features = ["derive", "env"] }

# Derives Serialize/Deserialize for the config types, patch definitions,
# and the dashboard's WebSocket payloads.
serde = { version = "1.0", features = ["derive"] }
# JSON codec for the WebSocket protocol, the health/metrics responses, and
# the generated OpenAPI document.
serde_json = "1.0"
# Parses the on-disk config.toml and the CLI-supplied patch libraries, and
# renders the `print --format toml` output.
toml = "1.1"

# Derives the semantic error enums used across every crate.
thiserror = "2.0"

# URL parsing.  Used by the Remote Source connector to normalize
# operator-supplied URLs (e.g. ensuring the path ends in `/ws`).
# Already a transitive dependency via reqwest; declaring it
# directly so the call sites are explicit and grep-able.
url = "2"

# Concurrency primitives.  Used in place of std::sync::{Mutex,
# RwLock} workspace-wide so we don't have to deal with lock
# poisoning: parking_lot's locks return guards directly (no
# `LockResult`) and do not propagate panics across critical
# sections, which lets us model only the failure modes that
# actually exist as `Result` rather than papering over a
# theoretical-but-impossible "poisoned" branch with
# `.unwrap()` / `.unwrap_or_recover()`.
parking_lot = "0.12"

# Scratch files and directories for tests — config fixtures and
# throwaway Unix-socket paths.
tempfile = "3"
# Compile-fail testing for the voice-derive proc-macro (asserts that bad
# annotations produce the expected errors).
trybuild = "1.0"
# `rustls-tls-native-roots` matches the reqwest pattern above:
# rustls for TLS, with `rustls-native-certs` reading the system CA
# store at runtime so private CAs (e.g. proton-ca) installed at
# /etc/ssl/certs are honoured.  Without a TLS feature, `wss://`
# connections fail with "URL error: TLS support not compiled in".
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }

# Audio DSP graph that synthesizes the sonification — oscillators,
# envelopes, and mixing for heartbeats, boops, and drones.
fundsp = "0.23"
# Cross-platform audio output: enumerates devices and streams the
# synthesized samples to the selected speaker.
cpal = "0.18"

# Installs the Ctrl-C handler that stops continuous preview playback and
# drives graceful shutdown.
ctrlc = "3.4"

# HTTP and WebSocket framework for the daemon's dashboard, health, and
# metrics routes; the ws feature enables the live note stream.
axum = { version = "0.8", features = ["ws"] }
# Async runtime hosting the server and the audio-engine tasks.
tokio = { version = "1.41", features = ["full"] }
# Listener binding that layers Unix-socket and systemd socket-activation
# support on top of plain TCP.
tokio-listener = { version = "0.5", features = ["axum08"] }
# Sink/Stream combinators for driving the WebSocket connections — both the
# server side and the remote-source client.
futures = "0.3"

# OIDC client type the server's AppState holds.  foundation's
# `impl_server_state!` macro expands to `Arc<::openidconnect::core::CoreClient>`
# in the server crate, so openidconnect must be a direct dependency there for
# that generated path to resolve.
openidconnect = { version = "3", features = ["reqwest"] }
# openidconnect's "rustls-tls" feature uses webpki-roots (Mozilla's CA list
# baked in at compile time), which doesn't include private CAs like proton-ca.
# Adding reqwest directly with rustls-tls-native-roots makes Cargo's feature
# unification pull in rustls-native-certs, so the system CA store
# (/etc/ssl/certs/ca-certificates.crt) is read at runtime instead.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }

# Metrics registry and the Prometheus text exposition served at /metrics.
prometheus = "0.13"

# Builds the OpenAPI document from the annotated routes and serves the
# Scalar API explorer.
aide = { version = "0.15", features = ["axum", "axum-json", "axum-query", "scalar", "macros"] }
# JSON Schema generation that aide uses to describe the documented routes.
schemars = "0.9"

# Parses the annotated input in the voice-derive proc-macro; full +
# extra-traits give the macro the syntax detail it inspects.
syn = { version = "2.0", features = ["full", "extra-traits"] }
# Quasi-quoting that builds the voice-derive macro's generated output.
quote = "1.0"
# Token-stream primitives underpinning the voice-derive proc-macro.
proc-macro2 = "1.0"

# Workspace library crate: patch model, audio synthesis, and config.  The
# version specifier is required for crates.io publishing — a published crate's
# path deps must also carry a version that crates.io can resolve.
sonify-health-lib = { path = "crates/lib", version = "0.31.0" }
# Workspace proc-macro crate backing the patch/voice derives.
sonify-health-voice-derive = { path = "crates/voice-derive", version = "0.31.0" }

# ============================================================================
# BUILD PROFILES
# ============================================================================
# Without these settings, target/debug can easily reach 20-40 GB on
# non-trivial projects.  Dependencies are the primary culprit.
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.dev]
# No debug symbols.  The debugger is rarely used and debug symbols are
# the single largest contributor to target/ bloat.
debug = false
# Disable incremental compilation.  Incremental writes many small files
# to target/debug/incremental/ that accumulate quickly; the compile-time
# benefit rarely outweighs the disk cost for typical workflows.
incremental = false

[profile.dev.package."*"]
# Optimize dependencies even in dev builds.  Libraries like tokio and
# axum are bottlenecks when unoptimized; this makes the program run at
# near-release speed during development with minimal extra compile time
# on subsequent incremental builds.
opt-level = 3

[profile.release]
debug = false
# These binaries ship as release artifacts, so optimize them for the end user
# rather than for build speed.  lto and a single codegen unit let the optimizer
# work across crate boundaries (faster runtime, smaller code), and strip removes
# symbols to shrink the download.  opt-level stays at the default 3 — tuned for
# speed, not size.
lto = true
codegen-units = 1
strip = true
