[package]
name = "sonify-health-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "sonify_health_cli"
path = "src/lib.rs"

[[bin]]
name = "sonify-health"
path = "src/main.rs"

# The cli is preview/print one-shots only.  The daemon (audio
# engine, web server, OIDC, WebSocket, metrics) lives in the sibling
# server crate; nothing here pulls those concerns in.
[dependencies]
sonify-health-lib = { workspace = true }
rust-template-foundation = { workspace = true, features = ["cli"] }
clap = { workspace = true }
ctrlc = { workspace = true }
# Required by the `MergeConfig` derive — the generated
# `ConfigFileRaw` carries `#[derive(serde::Deserialize)]` so serde
# must be visible to the cli crate even though our own source
# doesn't `use` it directly.
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
