[package]
name = "sonify-health-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
clap = { workspace = true }
fundsp = { workspace = true }
cpal = { workspace = true }
parking_lot = { workspace = true }
sonify-health-voice-derive = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
